Filtrage par(Salle,Matiere,Groupe..) + readapte page connexion